feature: optize yh logo
Signed-off-by: hengyu-coder <guoyu486@gmail.com>

--- a/chaosblade-box-starter/src/main/resources/application.properties
+++ b/chaosblade-box-starter/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.mcms.enabled=false
 spring.velocity.enabled=false
 security.basic.enabled=false
-chaos.sync.chaosblade.on-startup=true
+chaos.sync.chaosblade.on-startup=false
 chaos.cache.enable=true
 chaos.cache.auto-sync=true
 chaos.cache.spring.enable=true
