feature: optize yh logic
Signed-off-by: hengyu-coder <guoyu486@gmail.com>

--- a/chaosblade-box-starter/src/main/resources/application.properties
+++ b/chaosblade-box-starter/src/main/resources/application.properties
@@ -61,4 +61,10 @@ regionId.default="cn-hangzhou"
 cloud.agent.version="1.16.3"
 chaos.server.domain=
 
+cas.server-login-url=http://o2o-support-sit.o2o-support-idaas-cas.sitgw.yonghui.cn/cas/login
+cas.server-url-prefix=http://o2o-support-sit.o2o-support-idaas-cas.sitgw.yonghui.cn/cas
+cas.client-host-url=http://10.67.87.56:7001
+cas.ignore-pattern=/v1/need/*
+cas.ignore-pattern=(/Agent*)|(/javaAgentInstall*)|(/k8sPod*)|(/chaosbladeAsync*)
+
 
