--- a/chaosblade-box-starter/pom.xml
+++ b/chaosblade-box-starter/pom.xml
@@ -57,6 +57,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>com.cas.starter</groupId>
+            <artifactId>cas-client-spring-boot-starter</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
